--- a/index.html
+++ b/index.html
@@ -1,82 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport"  content="width=decive-width,initial- scale=1.0">
-   <link rel="stylesheet"  href="style.css">
-   <tittle>solar system</tittle>
-</head>
-<body
- 
-<div class="layout">
-  <ol class="solar-system">
-    <li class="orbit">
-      <div class="lebel">sun</div>
-      <div class="planet sun"></div>
-      <li>
-        <li class="orbit">
-          <div class="label">Mercury</div>
-          <div class="orbit-ring"></div>
-          <div class="axis">
-            <div class="planet Mercury"></div>
-          </div>
-          
-        </li>
-        <li class="orbit">
-          <div class="label">Venus</div>
-          <div class="orbit-ring"></div>
-          <div class="axis">
-            <div class="planet"></div>
-          </div>
-
-        </li>
-        <li class="orbit">
-          <div class="orbit">
-          <div class="label">Earth</div>
-          <div class="orbit-ring"></div>
-          <div class="axis">
-            <div class="planet Earth"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.0.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Web Design Mastery | Personal Portfolio Page</title>
+  </head>
+  <body>
+    <nav>
+      <div class="nav__logo"><a href="#">Cod<span>e</span>r.</a></div>
+    </nav>
+    <header>
+      <div class="section__container header__container">
+        <p><span>Hello</span> I'm</p>
+        <h1>Laboni</h1>
+        <h2 class="section__title">Digital Marketing<span>Expert.</span></h2>
+        <p>
+          Welcome to my digital marketing portfolio! I'm Laboni, a results-driven and creative digital marketer with a passion for crafting compelling campaigns, building strong online presence, and driving measurable growth. I’ve worked on a variety of marketing projects—from personal branding to full-scale e-commerce strategies—leveraging SEO, social media, content creation, and analytics to deliver real impact. 
+        </p>
+        <div class="action__btns">
+          <button class="btn">Say Hello</button>
+          <a href="#" class="video">
+            <div class="play">
+              <i class="ri-play-fill"></i>
             </div>
-        </li>
-        <li class="orbit">
-          <div class="orbit">
-          <div class="label">Mars</div>
-          <div class="orbit-ring"></div>
-          <div class="axis">
-            <div class="planet jupiter"></div>
-            </div>
-            <li class="orbit">
-              <div class="orbit">
-              <div class="label">saturn</div>
-              <div class="orbit-ring"></div>
-              <div class="axis">
-                <div class="planet saturn"></div>
-                </div>
-                <li class="orbit">
-                  <div class="orbit">
-                  <div class="label">Uranus</div>
-                  <div class="orbit-ring"></div>
-                  <div class="axis">
-                    <div class="planet Uranus"></div>
-                    </div>
-                    <li class="orbit">
-                      <div class="orbit">
-                      <div class="label">Neptune</div>
-                      <div class="orbit-ring"></div>
-                      <div class="axis">
-                        <div class="planet Neptune"></div>
-                        </div>
-                        <li class="orbit">
-                          <div class="orbit">
-                          <div class="label">Pluto</div>
-                          <div class="orbit-ring"></div>
-                          <div class="axis">
-                            <div class="planet Pluto"></div>
-                            </div>              
-                        </li>
-                      </ol>
-                   </div>
-                 
+            <span>Watch My Video</span>
+          </a>
+        </div>
+      </div>
+    </header>
+    <section class="about">
+      <div class="section__container about__container">
+        <div class="about__image">
+          <img src="assets/nill sari.png" alt="about" />
+        </div>
+        <div class="about__content">
+          <h2 class="section__title">About <span>Me</span></h2>
+          <p class="section__subtitle">Digital marketing expart!</p>
 
- </body>
+          <p class="about__details">
+            As a Digital Marketer designer, I specialize in creating user interfaces and
+            experiences for digital products. I have extensive experience
+            working with product managers, developers, and other stakeholders to
+            gather requirements, create wireframes and prototypes, and conduct
+            user testing to ensure that the final product meets the needs of the
+            users. Throughout my career, I have achieved several milestones,
+            including designing successful digital products that have received
+            positive feedback from users and stakeholders.
+          </p>
+          <button class="btn">More About</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="service">
+      <div class="section__container service__container">
+        <p class="section__subtitle">What I Offer!</p>
+        <h2 class="section__title"><span>My</span> Services</h2>
+        <div class="service__grid">
+          <div class="service__card">
+            <i class="ri-smartphone-line"></i>
+            <h4>SEO</h4>
+            <p>
+              I specialize in delivering high-quality, customized digital marketing services tailored to meet the unique needs of each client. Our goal is to drive measurable results, enhance online visibility, and help businesses grow through strategic and personalized marketing solutions.
+            </p>
+            <a href="#" class="read__more">Read more...</a>
+          </div>
+          <div class="service__card">
+            <i class="ri-code-s-slash-line"></i>
+            <h4>E-Commerce Website Development</h4>
+            <p>
+              "Utilizing the latest web technologies and cutting-edge development tools, we craft e-commerce websites that deliver speed, security, scalability, and an exceptional user experience."
+            </p>
+            <a href="#" class="read__more">Read more...</a>
+          </div>
+          <div class="service__card">
+            <i class="ri-edit-2-line"></i>
+            <h4>Lead Generation</h4>
+            <p>
+              We believe in a collaborative approach, working closely with you and welcoming your feedback at every stage. Together, we’ll create a website that not only meets but exceeds your expectations.
+            </p>
+            <a href="#" class="read__more">Read more...</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="project">
+      <div class="section__container project__container">
+        <p class="section__subtitle">Portfolio</p>
+        <h2 class="section__title"><span>Latest</span> Project</h2>
+        <div class="project__grid">
+          <div class="project__card">
+            <img src="assets/project-1.png" alt="project" />
+          </div>
+          <div class="project__card">
+            <img src="assets/project-2.png" alt="project" />
+          </div>
+          <div class="project__card">
+            <img src="assets/project-3.png" alt="project" />
+          </div>
+          <div class="project__card">
+            <img src="assets/project-4.png" alt="project" />
+          </div>
+          <div class="project__card">
+            <img src="assets/project-5.png" alt="project" />
+          </div>
+          <div class="project__card">
+            <img src="assets/project-6.png" alt="project" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="section__container footer__container">
+        <div class="footer__content">
+          <h2 class="section__title">Contact <span>Me!</span></h2>
+          <p class="section__subtitle">If you have any project in your mind</p>
+          <div class="footer__details">
+            <p>
+              You can reach me through the contact form provided on this
+              website. Simply fill out the form with your name, email address,
+              and message, and I will get back to you as soon as possible.
+            </p>
+            <p>Digital Agency Network, 20</p>
+            <p>Eastbourne Terrace, London W2 6LG,</p>
+            <p>United Kingdom</p>
+          </div>
+          <div class="social__icons">
+            <a href="#" class="icon"><i class="ri-facebook-fill"></i></a>
+            <a href="#" class="icon"><i class="ri-mail-line"></i></a>
+            <a href="#" class="icon"><i class="ri-twitter-fill"></i></a>
+            <a href="#" class="icon"><i class="ri-linkedin-fill"></i></a>
+          </div>
+        </div>
+        <form class="footer__form">
+          <input type="text" placeholder=" Your Name:" />
+          <input type="text" placeholder=" Your Gmail:" />
+          <input type="text" placeholder=" Your Phone Number:" />
+          <textarea cols="30" rows="10" placeholder="Your Idea"></textarea>
+          <button type="submit" class="btn">Send Message</button>
+        </form>
+      </div>
+    </footer>
+  </body>
 </html>
